# docutaz

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  README.md  refactor-plan.md  shortcuts.txt  vcpkg.json
src/docutaz/: CMakeLists.txt
src/docutaz-gui-tests/: CMakeLists.txt  CopyResultsDialog_gui_test.cpp  ExportResultsDialog_gui_test.cpp  main.cpp
src/docutaz-unit-tests/: CMakeLists.txt  README.md
src/docutaz/app/: main.cpp  main_mongo.cpp  preflight.c
src/docutaz/core/: AppRegistry.cpp  AppRegistry.h  Core.h  Enums.cpp  Enums.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  EventBusDispatcher.cpp  EventBusDispatcher.h  EventBusSubscriber.cpp  EventError.cpp  EventError.h  EventWrapper.cpp  EventWrapper.h  HexUtils.cpp  HexUtils.h  KeyboardManager.cpp  QueryHistory.cpp  QueryHistory.h  QueryHistory_test.cpp  UpdateChecker.cpp  UpdateChecker.h  UpdateChecker_test.cpp
src/docutaz/core/domain/: App.cpp  App.h  CursorPosition.cpp  MongoCollection.cpp  MongoCollection.h  MongoCollectionInfo.cpp  MongoCollectionInfo.h  MongoDatabase.cpp  MongoDatabase.h  MongoDocument.cpp  MongoDocument.h  MongoFunction.cpp  MongoNamespace.cpp  MongoQueryInfo.cpp  MongoQueryInfo.h  MongoServer.cpp  MongoServer.h  MongoShell.cpp  MongoShell.h  MongoShellResult.h  MongoUser.h  MongoUtils.cpp  Notifier.cpp  Notifier.h  ScriptInfo.cpp  ScriptInfo.h
src/docutaz/core/engine/: MongoshEngine.cpp  MongoshEngine.h
src/docutaz/core/events/: MongoEvents.cpp  MongoEvents.h  MongoEventsInfo.cpp  MongoEventsInfo.h
src/docutaz/core/mongodb/: MongoClient.cpp  MongoClient.h  MongoClient_connection_test.cpp  MongoWorker.cpp  MongoWorker.h  ReplicaSet.cpp  ReplicaSet.h  SshTunnelWorker.cpp  SshTunnelWorker.h
src/docutaz/core/settings/: ConnectionSettings.cpp  ConnectionSettings.h  ConnectionSettings_test.cpp  CredentialSettings.cpp  CredentialSettings.h  ReplicaSetSettings.cpp  SettingsManager.cpp  SettingsManager.h  SettingsManager_test.cpp  SshSettings.cpp  SslSettings.cpp
src/docutaz/core/utils/: BsonBridge.h  BsonBridge_test.cpp  BsonUtils.cpp  BsonUtils.h  BsonUtils_test.cpp  Exporter.cpp  Exporter.h  Exporter_test.cpp  Logger.cpp  Logger.h  QtUtils.cpp  QtUtils.h  ScriptClassifier.cpp  ScriptClassifier.h  ScriptClassifier_test.cpp  StdUtils.cpp  StdUtils.h
src/docutaz/gui/: AppStyle.cpp  AppStyle.h  ConnectionEnvironment.h  GlyphIcons.cpp  GlyphIcons.h  GuiRegistry.cpp  GuiRegistry.h  GuiResources_test.cpp  MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h
src/docutaz/gui/dialogs/: AboutDialog.cpp  AboutDialog.h  ChangeShellTimeoutDialog.cpp  ChangeShellTimeoutDialog.h  ConnectionAdvancedTab.cpp  ConnectionAdvancedTab.h  ConnectionAuthTab.cpp  ConnectionAuthTab.h  ConnectionBasicTab.cpp  ConnectionBasicTab.h  ConnectionDiagnosticDialog.cpp  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionsDialog.cpp  ConnectionsDialog.h  CopyCollectionDialog.cpp  CopyCollectionDialog.h  CopyResultsDialog.cpp  CopyResultsDialog.h  CreateCollectionDialog.cpp  CreateDatabaseDialog.cpp  CreateDatabaseDialog.h  CreateUserDialog.cpp  CreateUserDialog.h  DocumentTextEditor.cpp  DocumentTextEditor.h  EulaDialog.cpp  EulaDialog.h  ExportDialog.cpp  ExportDialog.h  ExportResultsDialog.cpp  ExportResultsDialog.h  FunctionTextEditor.cpp  FunctionTextEditor.h  PreferencesDialog.cpp  PreferencesDialog.h  SSHTunnelTab.cpp  SSHTunnelTab.h  SSLTab.cpp  SSLTab.h
src/docutaz/gui/editors/: FindFrame.cpp  FindFrame.h  JSLexer.cpp  JSLexer.h  JsBeautifier.cpp  JsBeautifier.h  JsBeautifier_test.cpp  MongoCompletionData.cpp  MongoCompletionData.h  PlainJavaScriptEditor.cpp  PlainJavaScriptEditor.h
src/docutaz/gui/resources/: gui.qrc
src/docutaz/gui/resources/fonts/: Inter-OFL.txt
src/docutaz/gui/utils/: ComboBoxUtils.cpp  DialogUtils.cpp  DialogUtils.h
src/docutaz/gui/widgets/: FlatComboBox.h  LogWidget.cpp  LogWidget.h  QueryHistoryWidget.cpp  QueryHistoryWidget.h
src/docutaz/gui/widgets/explorer/: AddEditIndexDialog.cpp  AddEditIndexDialog.h  ExplorerCollectionIndexItem.cpp  ExplorerCollectionIndexItem.h  ExplorerCollectionIndexesDir.cpp  ExplorerCollectionIndexesDir.h  ExplorerCollectionTreeItem.cpp  ExplorerCollectionTreeItem.h  ExplorerDatabaseCategoryTreeItem.cpp  ExplorerDatabaseCategoryTreeItem.h  ExplorerDatabaseTreeItem.cpp  ExplorerDatabaseTreeItem.h  ExplorerFunctionTreeItem.cpp  ExplorerFunctionTreeItem.h  ExplorerReplicaSetFolderItem.cpp  ExplorerReplicaSetFolderItem.h  ExplorerReplicaSetTreeItem.cpp  ExplorerReplicaSetTreeItem.h  ExplorerServerTreeItem.cpp  ExplorerServerTreeItem.h  ExplorerTreeItem.cpp  ExplorerTreeItem.h  ExplorerTreeWidget.cpp  ExplorerUserTreeItem.cpp  ExplorerUserTreeItem.h  ExplorerWidget.cpp  ExplorerWidget.h
src/docutaz/gui/widgets/workarea/: BsonTableModel.cpp  BsonTableModel.h  BsonTableView.cpp  BsonTableView.h  BsonTreeItem.cpp  BsonTreeModel.cpp  BsonTreeModel.h  BsonTreeView.cpp  BsonTreeView.h  CollectionStatsTreeItem.cpp  CollectionStatsTreeItem.h  CollectionStatsTreeWidget.cpp  CollectionStatsTreeWidget.h  IndicatorLabel.cpp  IndicatorLabel.h  JsonPrepareThread.cpp  JsonPrepareThread.h  OutputItemContentWidget.cpp  OutputItemContentWidget.h  OutputItemHeaderWidget.cpp  OutputItemHeaderWidget.h  OutputWidget.cpp  OutputWidget.h  PagingWidget.cpp  PagingWidget.h  ProgressBarPopup.cpp  ProgressBarPopup.h  QueryHistoryTab.cpp  QueryHistoryTab.h  QueryWidget.cpp  QueryWidget.h  ScriptWidget.cpp  ScriptWidget.h  WelcomeTab.cpp  WelcomeTab.h  WorkAreaTabBar.h  (+3 more)
src/docutaz/resources/: mongosh_preamble.js
src/docutaz/shell/bson/: json.cpp  json.h
src/docutaz/shell/db/: ptimeutil.cpp  ptimeutil.h
src/docutaz/shell/shell/: dbshell.cpp
src/docutaz/ssh/: array.c  log.c  private.h  ssh.c  test.c
src/docutaz/ssh/temp/: internal.h  temp_ssh.c  temp_ssh.h  temp_ssh_log.c
src/docutaz/utils/: DocutazCrypt.cpp  DocutazCrypt.h  DocutazCrypt_test.cpp  RoboCrypt.cpp  RoboCrypt.h  RoboCrypt_test.cpp  SimpleCrypt.cpp  StringOperations.cpp  StringOperations.h  StringOperations_test.cpp  common.cpp  common.h
src/tests/: CMakeLists.txt  bson_bridge_roundtrip.cpp
(+259 files in other folders)
